--- a/netflix-analysis.ipynb
+++ b/netflix-analysis.ipynb
@@ -1,27 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "iptn8taXOfvW"
-   },
-   "source": [
-    "# EXPLORATORY DATA ANALYSIS\n",
-    "# DATA CLEANING\n",
-    "# DATA MAPPING\n",
-    "# DATA VISUALIZATION"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "2RA0ZUmebRAz"
-   },
-   "source": [
-    "We import pandas library to do exploratory data analysis and visualization"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1254,7 +1233,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdfafdf1a58>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7628d2ab00>"
       ]
      },
      "execution_count": 33,
